--- a/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@using HealthifyApp.Web.ViewModels.UserProfile
-@model UserProfileFormModel
+@model UserProfileViewModel
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">User Profile</h2>
-
-    @if (Model.IsExistingProfile)
-    {
         <div class="table-responsive">
             <table class="table table-bordered table-striped">
                 <thead>
@@ -48,6 +45,4 @@
                 <i class="bi bi-pencil-square"></i> Edit Profile
             </a>
         </div>
-    }
-
 </div>
