--- a/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@using HealthifyApp.Web.ViewModels.UserProfile
 @model UserProfileViewModel
 
-<div class="container mt-5">
-    <h2 class="text-center mb-4">User Profile</h2>
+@if (Model.IsActiveProfile == true)
+{
+    <div class="container mt-5">
+        <h2 class="text-center mb-4">User Profile</h2>
         <div class="table-responsive">
             <table class="table table-bordered table-striped">
                 <thead>
@@ -44,5 +46,15 @@
             <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">
                 <i class="bi bi-pencil-square"></i> Edit Profile
             </a>
+            <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">
+                <i class="bi bi-pencil-square"></i> Delete Profile
+            </a>
         </div>
-</div>
+    </div>
+}
+else
+{
+    <div class="alert alert-danger mt-3">
+        <strong>Status:</strong> This profile has been deleted (soft-deleted).
+    </div>
+}
