--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Create.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using HealthifyApp.Web.ViewModels.Goal
-@model CreateGoalFormModel
+﻿@using HealthifyApp.Data.Models.Enums
+@model HealthifyApp.Web.ViewModels.Goal.CreateGoalFormModel
 
 @{
     ViewData["Title"] = "Create Goal";
@@ -16,13 +16,13 @@
 
     <div class="form-group">
         <label asp-for="GoalType" class="form-label"></label>
-        <input asp-for="GoalType" class="form-control" />
+        <select asp-for="GoalType" class="form-control" asp-items="Html.GetEnumSelectList<Goals>()"></select>
         <span asp-validation-for="GoalType" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Activity" class="form-label"></label>
-        <input asp-for="Activity" class="form-control" />
+        <select asp-for="Activity" class="form-control" asp-items="Html.GetEnumSelectList<Activity>()"></select>
         <span asp-validation-for="Activity" class="text-danger"></span>
     </div>
 
