--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
@@ -3,6 +3,14 @@
 
 <h2>Your Goals</h2>
 
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
+
+
 <table class="table">
     <thead>
         <tr>
