--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using HealthifyApp.Web.ViewModels.Goal
-@model IEnumerable<GoalViewModel>
+@model IEnumerable<GoalListViewModel>
 
 <h2>Your Goals</h2>
 
@@ -9,7 +9,6 @@
         @TempData["ErrorMessage"]
     </div>
 }
-
 
 <table class="table">
     <thead>
