--- a/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 Nutrition
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="nutritionDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="TargetNutritional" asp-action="Index">Target Nutrition</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="TargetNutrition" asp-action="Index">Target Nutrition</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="NutritionIntake" asp-action="Index">Nutrition Intake</a></li>
                             </ul>
                         </li>
