--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Delete.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Delete.cshtml
@@ -3,6 +3,10 @@
 
 <h2>Delete Goal</h2>
 
+@{
+    ViewData["Title"] = "Delete Goal";
+}
+
 @if (TempData["ErrorMessage"] != null)
 {
     <div class="alert alert-danger">
