--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Index.cshtml
@@ -3,6 +3,10 @@
 
 <h2>Your Goals</h2>
 
+@{
+    ViewData["Title"] = "Goal";
+}
+
 @if (TempData["ErrorMessage"] != null)
 {
     <div class="alert alert-danger">
