--- a/HealthifyApp/HealthifyApp.Web/Views/TargetNutrition/Create.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/TargetNutrition/Create.cshtml
@@ -1,5 +1,9 @@
-﻿<!-- Views/TargetNutrition/Create.cshtml -->
-@model HealthifyApp.Web.ViewModels.TargetNutrition.CreateTargetNutritionFormModel
+﻿@using HealthifyApp.Web.ViewModels.TargetNutrition
+@model CreateTargetNutritionFormModel
+
+@{
+    ViewData["Title"] = "Create TargetNutrition";
+}
 
 <h1>Create Target Nutrition</h1>
 
