--- a/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Delete.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Delete.cshtml
@@ -3,6 +3,10 @@
 
 <h2>Delete User Profile</h2>
 
+@{
+    ViewData["Title"] = "Delete UserProfile";
+}
+
 @if (TempData["ErrorMessage"] != null)
 {
     <div class="alert alert-danger">
