--- a/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Edit.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Edit.cshtml
@@ -2,6 +2,10 @@
 @using HealthifyApp.Web.ViewModels.UserProfile
 @model EditUserProfileFormModel
 
+@{
+    ViewData["Title"] = "Edit UserProfile";
+}
+
 <div class="container mt-5">
     <h2 class="text-center mb-4">Edit Profile</h2>
 
