--- a/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Create.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/UserProfile/Create.cshtml
@@ -2,6 +2,10 @@
 @using HealthifyApp.Web.ViewModels.UserProfile
 @model CreateUserProfileFormModel
 
+@{
+    ViewData["Title"] = "Create UserProfile";
+}
+
 <div class="container mt-5">
     <h2 class="text-center mb-4">Create Profile</h2>
 
