--- a/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Progress Log</h5>
                             <p>Weight: <strong>@Model.CurrentWeight</strong> | Goal: <strong>@Model.GoalWeight</strong></p>
-                            <a href="/ProgressLog" class="btn btn-outline-primary">Update Progress</a>
+                            <a href="/ProgressLog" class="btn btn-outline-primary">Add today Progress</a>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                                 <li>Water Intake: <span class="text-success">@Model.WaterIntakeStatus</span></li>
                                 <li>Calories: <span class="text-warning">@Model.CalorieStatus</span></li>
                             </ul>
-                            <a href="/NutritionPlan" class="btn btn-outline-warning">View Goals</a>
+                            <a href="/Goal" class="btn btn-outline-warning">View Goals</a>
                         </div>
                     </div>
                 </div>
