--- a/HealthifyApp/HealthifyApp.Web/Views/Goal/Create.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Goal/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@using HealthifyApp.Data.Models.Enums
-@model HealthifyApp.Web.ViewModels.Goal.CreateGoalFormModel
+@using HealthifyApp.Web.ViewModels.Goal
+@model CreateGoalFormModel
 
 @{
     ViewData["Title"] = "Create Goal";
