--- a/HealthifyApp/HealthifyApp.Web/Views/ProgressLog/AddProgress.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/ProgressLog/AddProgress.cshtml
@@ -38,5 +38,9 @@
         <span asp-validation-for="GoalChest" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+    <div>
+        <button type="submit" class="btn btn-primary">Save</button>
+        <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    </div>
+
 </form>
