Edit water table

--- a/HealthifyApp/HealthifyApp.Web/Views/NutritionIntake/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/NutritionIntake/Index.cshtml
@@ -42,7 +42,7 @@
     </tbody>
 </table>
 
-@if (Model.CurrentCalories < 0)
+@if (Model.CurrentCalories == 0)
 {
     <p>No intake logged for today.</p>
     <a class="btn btn-primary" asp-action="AddIntake">Add Today's Intake</a>
