--- a/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
@@ -66,13 +66,10 @@
                 <h2>Health Calculators</h2>
                 <div class="row">
                     <div class="col-md-4 mb-3">
-                        <a href="/Calculators/BMI" class="btn btn-lg btn-outline-info w-100">BMI Calculator</a>
+                        <a href="/BMI" class="btn btn-lg btn-outline-info w-100">BMI Calculator</a>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <a href="/Calculators/CalorieIntake" class="btn btn-lg btn-outline-info w-100">Calorie Intake Calculator</a>
-                    </div>
-                    <div class="col-md-4 mb-3">
-                        <a href="/Calculators/WaterIntake" class="btn btn-lg btn-outline-info w-100">Water Intake Calculator</a>
+                        <a href="/WaterIntake" class="btn btn-lg btn-outline-info w-100">Water Intake Calculator</a>
                     </div>
                 </div>
             </div>
