--- a/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
@@ -67,8 +67,8 @@
                                     Calculators
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="calculatorDropdown">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Calculators" asp-action="BMI">BMI Calculator</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Calculators" asp-action="WaterIntake">Water Intake Calculator</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Calculators" asp-action="Index">BMI Calculator</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="WaterIntake" asp-action="Index">Water Intake Calculator</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
