Add BMI pages, models and fix BMI table

--- a/HealthifyApp/HealthifyApp.Web/Views/WaterIntake/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/WaterIntake/Index.cshtml
@@ -4,6 +4,10 @@
 
 <h2>Water Intake Calculator</h2>
 
+@{
+    ViewData["Title"] = "Water Intake Calculator";
+}
+
 <form asp-action="UpdateWaterIntake" method="post">
     <div class="form-group">
         <label for="Weight">Your Weight (kg)</label>
