--- a/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                                     Calculators
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="calculatorDropdown">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Calculators" asp-action="Index">BMI Calculator</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="BMI" asp-action="Index">BMI Calculator</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="WaterIntake" asp-action="Index">Water Intake Calculator</a></li>
                                 </ul>
                             </li>
