Add Delete for Workout

--- a/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Workout Summary</h5>
                             <p>Last workout: <strong>@Model.LastWorkout</strong></p>
-                            <a href="/Workout" class="btn btn-outline-success">Start a New Workout</a>
+                            <a href="/Workout/Create" class="btn btn-outline-success">Start a New Workout</a>
                         </div>
                     </div>
                 </div>
