--- a/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using static CinemaApp.Common.ApplicationConstants
+﻿@using static HealthifyApp.Common.ApplicationConstants
 @using HealthifyApp.Services.Data.Interfaces
 @using HealthifyApp.Web.Infrastructure.Extensions
 @inject IBaseService baseService
