--- a/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HealthifyApp.Web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dxQ5Qje3/NCuO4Ylo8hL5Y7JnyihMQVmlP5klULfGEXqs9g1r8oyKaRYHdGV4R5PY7bcuXDXnLVhpu7HEBymg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
