--- a/HealthifyApp/HealthifyApp.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     <i class="fas fa-bullseye fa-3x text-success mb-3"></i>
                     <h5 class="card-title mb-3">Manage Goals</h5>
                     <p class="card-text text-muted">Delete or update goal entries efficiently.</p>
-                    <a asp-area="Admin" asp-controller="Goal" asp-action="Index" class="btn btn-success w-100 mt-auto">
+                    <a asp-area="Admin" asp-controller="GoalManagement" asp-action="Index" class="btn btn-success w-100 mt-auto">
                         <i class="fas fa-arrow-right"></i> Go to Goals
                     </a>
                 </div>
