Add Index View for TargetNutritionManagement

--- a/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                 <div class="my-5">
                     <h3 class="text-center text-danger">Admin Dashboard</h3>
                     <div class="text-center">
-                        <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="btn btn-lg btn-outline-danger">
+                        <a asp-area="Admin" asp-controller="HomeManagement" asp-action="Index" class="btn btn-lg btn-outline-danger">
                             <i class="bi bi-gear-fill"></i> Manage Users
                         </a>
                     </div>
