--- a/HealthifyApp/HealthifyApp.Web/Areas/Admin/Views/HomeManagement/Index.cshtml
+++ b/HealthifyApp/HealthifyApp.Web/Areas/Admin/Views/HomeManagement/Index.cshtml
@@ -47,7 +47,7 @@
                     <i class="fas fa-apple-alt fa-3x text-info mb-3"></i>
                     <h5 class="card-title mb-3">Manage Nutrition</h5>
                     <p class="card-text text-muted">Delete or manage target nutrition data.</p>
-                    <a asp-area="Admin" asp-controller="Nutrition" asp-action="Index" class="btn btn-info w-100 mt-auto">
+                    <a asp-area="Admin" asp-controller="TargetNutritionManagement" asp-action="Index" class="btn btn-info w-100 mt-auto">
                         <i class="fas fa-arrow-right"></i> Go to Nutrition
                     </a>
                 </div>
